created Form and used routes

--- a/steminist/src/components/Header/Header.scss
+++ b/steminist/src/components/Header/Header.scss
@@ -10,8 +10,9 @@
     top: 0;
 }
 
-.header h1 {
+.header a {
     color: #fff;
+    text-decoration: none;
     justify-content: center;
     background-color:#6b2999;
 }
