--- a/steminist/src/pages/LogIn/LogIn.scss
+++ b/steminist/src/pages/LogIn/LogIn.scss
@@ -9,7 +9,6 @@
 
 .login a{
     text-decoration: none;
-    border: solid black 2px;
 }
 
 .left-side{
@@ -24,6 +23,17 @@
     height: 100vh;
     width: 50%;
     right: 0;
-    background-color: burlywood;
+    background-color: #be8de0;
+}
 
+.right-side div,h1 {
+    padding: 0 5%;
+    background-color: #be8de0;
+}
+
+.right-side a {
+    color: black;
+    background-color: #fff;
+    padding: 10px 30px;
+    border-radius: 4px;
 }
