--- a/steminist/src/pages/Recommendations/Recommendations.scss
+++ b/steminist/src/pages/Recommendations/Recommendations.scss
@@ -4,3 +4,10 @@
     padding-left: 10%;
     padding-right: 10%;
 }
+
+.div {
+    border: solid #be8de0 3px;
+    border-radius: 4px;
+    padding: 10px;
+    margin: 75px auto;
+}
